--- a/prcing-tool.html
+++ b/prcing-tool.html
@@ -62,8 +62,34 @@
                     <div class="pt-inner-circle-wrapper">
                         <div class="pt-inner-circle"></div>
                         <div class="pt-inner-circle-selector-wrapper">
-                            <div class="pt-language-selector"></div>
-                            <div class="pt-sample-size-selector"></div>
+                            <div class="pt-language-selector">
+                                <svg width="243" height="85">
+                                    <g transform="translate(0.000000,85.000000) scale(0.100000,-0.100000)" fill="#50677e" stroke="none">
+                                        <path d="M920 839 c-129 -13 -310 -44 -438 -75 -199 -48 -488 -152 -480 -173 1 -5 59 -137 127 -293 l125 -285 85 34 c503 197 1077 213 1592 42 65 -21 143 -50 173 -63 l56 -25 14 27 c8 15 55 119 106 232 51 113 105 233 120 267 l28 61 -127 50 c-223 89 -471 154 -711 187 -138 19 -535 28 -670 14z "/>
+                                    </g>
+                                    <defs>
+                                        <path id="language-textpath" fill="none" stroke="none" d="M 20,60 Q 150,15 330,100" />
+                                    </defs>
+                                    <use xlink:href="#language-textpath" fill="none" stroke="none" />
+                                    <text x="45" y="45" font-size="24px" fill="#ffffff">
+                                        <textPath xlink:href="#language-textpath">Languages</textPath>
+                                    </text>
+                                </sgv>
+                            </div>
+                            <div class="pt-sample-size-selector">
+                                <svg width="181" height="206">
+                                    <g transform="translate(0.000000,206.000000) scale(0.100000,-0.100000)" fill="#50677e" stroke="none">
+                                        <path d="M146 1778 c-104 -203 -142 -285 -133 -291 6 -4 61 -36 121 -72 475 -285 851 -759 1016 -1280 18 -55 35 -107 38 -116 6 -14 46 -6 312 64 168 43 307 81 309 83 7 7 -56 207 -104 329 -223 572 -627 1073 -1138 1408 -104 69 -256 157 -270 157 -3 0 -71 -127 -151 -282z" />
+                                    </g>
+                                    <defs>
+                                        <path id="sample-size-textpath" fill="none" stroke="none" d="M 10,25 Q 180,160 140,290" />
+                                    </defs>
+                                    <use xlink:href="#sample-size-textpath" fill="none" stroke="none" />
+                                    <text x="45" y="45" font-size="24px" fill="#ffffff">
+                                        <textPath xlink:href="#sample-size-textpath">Sample size</textPath>
+                                    </text>
+                                </sgv>
+                            </div>
                             <div class="pt-questions-selector"></div>
                             <div class="pt-codebook-translation-selector"></div>
                             <div class="pt-verbatims-translation-selector"></div>
@@ -92,6 +118,10 @@
                                     <div class="radio form-group">
                                         <input type="radio" name="pt-language-choose" id="pt-language-mandarin">
                                         <label class="control-label" for="pt-language-mandarin">Mandarin</label>
+                                    </div>
+                                    <div class="radio form-group">
+                                        <input type="radio" name="pt-language-choose" id="pt-language-italian">
+                                        <label class="control-label" for="pt-language-italian">Italian</label>
                                     </div>
                                     <div class="radio form-group">
                                         <input type="radio" name="pt-language-choose" id="pt-language-portuguese">
