--- a/prcing-tool.html
+++ b/prcing-tool.html
@@ -90,7 +90,20 @@
                                     </text>
                                 </sgv>
                             </div>
-                            <div class="pt-questions-selector"></div>
+                            <div class="pt-questions-selector">
+                                <svg width="111" height="238">
+                                    <g transform="translate(0.000000,238.000000) scale(0.100000,-0.100000)"fill="#50677e" stroke="none">
+                                        <path d="M705 2308 c-159 -33 -291 -61 -292 -62 -1 -1 4 -38 12 -81 78 -437 14 -935 -172 -1349 -51 -113 -144 -280 -208 -373 l-43 -61 256 -189 c141 -103 258 -188 261 -188 12 0 159 229 223 347 164 304 273 635 330 998 19 124 22 185 22 425 0 240 -3 300 -22 422 -26 169 -28 173 -56 172 -11 0 -151 -28 -311 -61z"/>
+                                    </g>
+                                    <defs>
+                                        <path id="questions-textpath" fill="none" stroke="none" d="M 45,215 Q 100,100 85,0" />
+                                    </defs>
+                                    <use xlink:href="#questions-textpath" fill="none" stroke="none" />
+                                    <text x="45" y="45" font-size="24px" fill="#ffffff">
+                                        <textPath xlink:href="#questions-textpath">Questions</textPath>
+                                    </text>
+                                </sgv>
+                            </div>
                             <div class="pt-codebook-translation-selector"></div>
                             <div class="pt-verbatims-translation-selector"></div>
                             <div class="pt-verbatims-extractions-selector"></div>
