verbatim translation design

--- a/prcing-tool.html
+++ b/prcing-tool.html
@@ -184,7 +184,7 @@
                                 <div class="pt-row-top pt-codebook-translation-content"></div>
                                 <div class="pt-row-top pt-verbatims-translation-content">
                                     <div class="pt-top-buttons-wrapper">
-                                        <input type="button" class="btn button-verbatim-translation selected" value="Language" />
+                                        <input type="button" class="btn button-verbatim-translation" value="Language" />
                                         <input type="button" class="btn button-verbatim-translation" value="Number" />
                                     </div>
                                     <div class="pt-verbatims-translation-labels form_group">
