--- a/prcing-tool.html
+++ b/prcing-tool.html
@@ -12,9 +12,21 @@
     <script src="design/js/jquery-2.1.3.min.js"></script>
     <script src="design/js/bootstrap.min.js"></script>
     <script src="design/js/pricing-tool.js"></script>
+    <script>
+	$(function() {
+		$( "#datepicker" ).datepicker({
+			firstDay: 1,
+			buttonImageOnly: true,
+			showOtherMonths: true,
+			selectOtherMonths: true, 
+		});
+	});
+	</script>
+<script src="http://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 
 <body>
+
     <section class="container pt-wrapper">
         <div class="row">
 
@@ -276,8 +288,8 @@
                                 <div class="pt-row-top pt-codebook-translation-content"></div>
                                 <div class="pt-row-top pt-verbatim-translation-content">
                                     <div class="pt-top-buttons-wrapper">
-                                        <input type="button" class="btn button-verbatim-translation" value="Language" />
-                                        <input type="button" class="btn button-verbatim-translation" value="Number" />
+                                        <input id="languages" type="button" class="btn button-verbatim-translation" value="Language" />
+                                        <input id="number" type="button" class="btn button-verbatim-translation button-verbatim-translation-selected" value="Number" />
                                     </div>
                                     <div class="pt-verbatim-translation-labels form_group">
                                         <div class="form_group row" >
@@ -292,6 +304,36 @@
                                             <label class="col-md-9">Feeling/likes questions</label> 
                                             <input class="col-md-3" type="number"/>
                                         </div>  
+                                    </div>
+                                    <div class="pt-verbatim-translation-languages form_group">
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-german">
+	                                        <label class="control-label" for="pt-language-german">German</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-spanish">
+	                                        <label class="control-label" for="pt-language-spanish">Spanish</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-english" checked>
+	                                        <label class="control-label" for="pt-language-english">English</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-french">
+	                                        <label class="control-label" for="pt-language-french">French</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-mandarin">
+	                                        <label class="control-label" for="pt-language-mandarin">Mandarin</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-italian">
+	                                        <label class="control-label" for="pt-language-italian">Italian</label>
+	                                    </div>
+	                                    <div class="checkbox form-group row">
+	                                        <input type="checkbox" name="pt-language-choose" id="pt-language-portuguese">
+	                                        <label class="control-label" for="pt-language-portuguese">Portuguese</label>
+	                                    </div>
                                     </div>
                                 </div>
                                 <div class="pt-row-top pt-codebooks-content">
@@ -319,6 +361,15 @@
                                     </div>
                                 </div>
                                 <div class="pt-row-top pt-date-availability-content">
+                                	<div>
+	                                	<div class="form_group row pt-choose-time-format">
+	                                		<label>AM:</label>
+	                                		<input type="radio" name="am-or-pm" checked = "true"></input>
+											<label>PM:</label>
+											<input type="radio" name="am-or-pm"></input>
+	                                	</div>
+	                                	<div id="datepicker" class="row"></div>
+	                                </div>
                                 </div>
                                 <div class="pt-row-bottom buttons-wrapper">
                                     <input type="submit" class="btn button-accept" value="Accept">
